# ffxiv_materialui_accent

./: .gitignore  README.md  build.sh  options.json  pngdds.py  repo.json  themes.json
diff_finder/: Cargo.toml
diff_finder/src/: main.rs
guides/: tags.md
mods/: mui_updater.py
mods/aetheris_job_gauges/: options.json
mods/aetheris_job_icons/: options.json
mods/alt_partylist_target/: options.json
mods/alternative_materia_icons/: config.json  options.json
mods/alternative_teleport_icons/: config.json  options.json
mods/bar_enmity/: options.json
mods/black_edge_duty_action/: options.json
mods/black_edge_icon_pack/: options.json
mods/black_edge_icon_pack_vanilla/: options.json
mods/black_edge_rounded_icon_pack/: options.json
mods/borderless_main_command_icons/: options.json
mods/colorable_limit_break/: options.json
mods/curved_windows/: config.json  options.json
mods/custom_notification_color/: options.json
mods/dark_and_silver_menu_icons/: options.json
mods/dark_edge_icon_pack/: options.json
mods/dogemap_and_coin/: config.json  options.json
mods/dracula_dungeon/: options.json
mods/material_ui_black/: config.json
mods/material_ui_black_plus/: config.json
mods/mecha_cursor/: config.json  options.json
plugin/: Aetherment.cs  Aetherment.csproj  Aetherment.json  Config.cs  Dalamud.cs  Installer.cs  MaterialUI.cs  MaterialUI.csproj  MaterialUI.json  Tex.cs  UI.cs  Updater.cs  materialui.cs  materialui.csproj  materialui.json  updater.cs
plugin/Format/: DDS.cs  (+6 more)
themes/: material_ui_black.json  material_ui_black_plus.json  pngdds.py
(+21491 files in other folders)
