[package]
name = "ffxivmoddiff"
version = "0.1.0"
edition = "2021"
description = "Simple CLI tool to check for changed game files of mods between game versions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
serde = "1.0.130"
serde_json = "1.0"
zip = "0.6.2"
blake3 = "1.3.1"
crc32fast = "1.3.2"
ironworks = {git = "https://github.com/ackwell/ironworks", rev = "bd787883d324f3a150bce5f1ab348d86e770e23e", features = ["ffxiv", "sqpack"]}